@@ -494,7 +494,7 @@ propagate_tree_select (SPRepr * repr)
 	} else {
 		sp_xmlview_attr_list_set_repr (attributes, NULL);
 	}
-	if (repr && sp_repr_is_text (repr)) {
+	if (repr && (sp_repr_is_text (repr) || sp_repr_is_cdata (repr))) {
 		sp_xmlview_content_set_repr (content, repr);
 	} else {
 		sp_xmlview_content_set_repr (content, NULL);
@@ -630,7 +630,7 @@ on_tree_select_row_show_if_text (GtkCTree * tree, GtkCTreeNode * node, gint colu
 {
 	SPRepr * repr;
 	repr = sp_xmlview_tree_node_get_repr (SP_XMLVIEW_TREE (tree), node);
-	if (sp_repr_is_text (repr)) {
+	if (sp_repr_is_text (repr) || sp_repr_is_cdata (repr)) {
 		gtk_widget_show (GTK_WIDGET (data));
 	} else {
 		gtk_widget_hide (GTK_WIDGET (data));
